--- a/suning/Base.lproj/Main.storyboard
+++ b/suning/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
         <!--购彩大厅-->
         <scene sceneID="tfQ-Wq-Cbu">
             <objects>
-                <viewController storyboardIdentifier="LotteryHallViewController" id="0Uj-on-DaD" customClass="LotteryHallViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LotteryHallViewController" id="0Uj-on-DaD" customClass="LotteryHallVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aNI-3j-531"/>
                         <viewControllerLayoutGuide type="bottom" id="ZZZ-pN-0gv"/>
@@ -38,19 +38,9 @@
                     <view key="view" contentMode="scaleToFill" id="iq8-87-0Su">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jf9-b0-5f6">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="购彩大厅" largeTitleDisplayMode="always" id="I92-n4-JkP"/>
-                    <connections>
-                        <outlet property="tableView" destination="jf9-b0-5f6" id="jsh-8M-iKz"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eg5-Hn-25N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
